Fix an modal height issue (too tall).

--- a/app/assets/stylesheets/modules/modal.css.scss
+++ b/app/assets/stylesheets/modules/modal.css.scss
@@ -1,7 +1,7 @@
 .modal-dialog,
 .modal-content {
   /* 80% of window height */
-  height: 80%;
+  max-height: 80%;
 }
 
 .modal-body {
